--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <div class="grid-container"></div>
 
-    <script href="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
