--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <div class="grid-container"></div>
+    <button id="reset-button">Reset Grid</button>
 
     <script src="script.js"></script>
 </body>
