--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" src="style.css">
 </head>
 <body>
+    <h1 id="title">Etch-a-Sketch</h1>
 
-    <div class="grid-container"></div>
-    <button id="reset-button">Reset Grid</button>
+    <div id="grid-container"></div>
 
     <script src="script.js"></script>
 </body>
